--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lab_12",
   "version": "0.1.0",
   "private": true,
-  "homepage": "",
+  "homepage": "https://ladzislaf.github.io/react-lab-12/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
